<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_pantalla_principal"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/entradaTerminoLineal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="3"
        android:hint="@string/pista_b"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/terminoCuadratico"
        app:layout_constraintTop_toTopOf="@id/entradaTerminoCuadratico" />

    <TextView
        android:id="@+id/terminoLineal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/termino_lineal"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/entradaTerminoCuadratico"
        app:layout_constraintStart_toEndOf="@id/entradaTerminoLineal"

        app:layout_constraintTop_toTopOf="@id/entradaTerminoCuadratico"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/entradaTerminoConstante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ems="3"
        android:hint="@string/pista_c"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/terminoLineal"
        app:layout_constraintTop_toTopOf="@+id/entradaTerminoCuadratico" />

    <TextView
        android:id="@+id/completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/termino_constante_final"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/entradaTerminoCuadratico"
        app:layout_constraintStart_toEndOf="@id/entradaTerminoConstante"
        app:layout_constraintTop_toTopOf="@id/entradaTerminoCuadratico"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/entradaTerminoCuadratico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        android:ems="3"
        android:hint="@string/pista_a"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/terminoCuadratico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/termino_cuadratico"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/entradaTerminoCuadratico"
        app:layout_constraintStart_toEndOf="@id/entradaTerminoCuadratico"
        app:layout_constraintTop_toTopOf="@id/entradaTerminoCuadratico"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:layout_width="183dp"
        android:layout_height="75dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="76dp"
        android:onClick="obtenerDatos"
        android:text="Resolver"
        app:layout_constraintLeft_toLeftOf="@id/entradaTerminoCuadratico"
        app:layout_constraintTop_toBottomOf="@id/entradaTerminoConstante" />


</androidx.constraintlayout.widget.ConstraintLayout>