<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaResolucion">

    <TextView
        android:id="@+id/tituloPantallaResultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_pantalla_resultados"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/purple_700"
        />

    <TextView
        android:id="@+id/introduccionResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduccion_reales"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tituloPantallaResultados"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/formatoParentesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/purple_500"
        android:text="Prueba"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/introduccionResultados"
        android:layout_marginTop="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/primeraXForNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/formato_normal_uno"
        app:layout_constraintTop_toBottomOf="@+id/formatoParentesis"
        android:layout_marginTop="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <TextView
        android:id="@+id/respuestaXNormalUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Prueba2"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/primeraXForNormal"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <TextView
        android:id="@+id/segundaXForNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/formato_normal_dos"
        app:layout_constraintTop_toBottomOf="@+id/primeraXForNormal"
        android:layout_marginTop="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/respuestaXNormalDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Prueba222"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/segundaXForNormal"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>